<resources>
    <string name="app_name">Winnipeg Transit+</string>
    <string name="search_hint">Search</string>
    <string name="button_send">Go</string>
    <string name="action_settings">Settings</string>
    <string name="enter_valid_stop_number">Please enter a valid stop number.</string>
    <string name="network_error">Network Error</string>
    <string name="route_number_filter_hint">Route number filter</string>
    <string name="favourites">Favourites</string>
    <string name="title_activity_favourites">Favourites</string>
    <string name="add_widget">Add Widget</string>
    <string name="banner_ad_home_unit_id">ca-app-pub-1189975520647633/7696260309</string>
    <string name="banner_ad_stops_list_unit_id">ca-app-pub-1189975520647633/9812121904</string>
    <string name="banner_ad_stop_times_unit_id">ca-app-pub-1189975520647633/1321335907</string>
    <string name="refresh_stop_times_button">Refresh</string>
    <string name="add_to_favourites_button">Add to Favourites</string>
    <string name="title_activity_search_results">Search Results</string>
    <string name="no_results_found">No results found.</string>
    <string name="title_activity_maps">Map</string>
    <string name="filter_button">Filter</string>
    <string name="filter_dialog_title">Select routes to filter</string>
    <string name="wait_for_load">Please wait for data to load</string>
    <string name="title_activity_scheduled_stop_info">"Bus Info"</string>
    <string name="bus_info_arrival">Arrival</string>
    <string name="bus_info_departure">Departure</string>
    <string name="scheduled">Scheduled Departure</string>
    <string name="estimated">Estimated Departure</string>
    <string name="title_activity_stop_info">StopInfoActivity</string>
    <string name="features_feature">Feature</string>
    <string name="features_count">Count</string>
    <string name="action_notification">Create Notification</string>
    <string name="banner_ad_stop_features_id">ca-app-pub-1189975520647633/3682591503</string>
    <string name="pref_favourites_sort">pref_favourites_sort_list</string>
    <string name="search_tip">Search by Street name, Route number or Stop number</string>
    <string name="map">Map</string>
    <string name="title_activity_route_map">Map</string>
    <string name="action_nearby_stops">Nearby Stops</string>
    <string name="stop_times_header_updated_text">Updated</string>
    <string name="title_activity_service_advisories">Service Advisories</string>
    <string name="title_activity_service_advisory">Service Advisory</string>
    <string name="unknown_error">Unknown error occurred</string>
    <string name="too_many_queries_error">Winnipeg Transit is rate limiting your device. Please wait a few seconds and try again</string>
    <string name="title_activity_trip_planner">Trip Planner</string>
    <string name="current_location">Current Location</string>
    <string name="no_location_found">No location found</string>
    <string name="get_directions">Get Directions</string>
    <string name="unable_to_find_place">Oops, Something went wrong trying to find the location</string>
    <string name="does_bus_have_wifi">This bus has WiFi</string>
    <string name="does_bus_have_bike_rack">This bus has a bike rack</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="disable_ads_confirmation_title">Are you sure you want to disable adds?</string>
    <string name="disable_ads_confirmation">They help to pay for the costs of developing the app.</string>
    <string name="pref_title_refresh_on_resume">Automatically refresh</string>
    <string name="privacy_url">http://kieranl.github.io/Winnipeg-Transit-Plus/</string>
    <string name="action_privacy_policy">Privacy Policy</string>
    <string name="does_bus_have_extended_capacity">This bus has a higher passenger capacity</string>
    <string name="data_not_found">Stop not found.</string>
    <string name="most_used_favourites">Frequently used favourites</string>
    <string name="pref_title_show_frequent_stops_on_home">Frequent favourites on Home</string>
    <string name="enable_stops_on_home_prompt">You view your most frequently used favourite stops on the home screen. It can also turned on or off in the settings if you want to change it later.</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="edit_favourite_dialog_title">Edit this Favourite?</string>
    <string name="default_label">Default</string>
</resources>
