<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MyActivity">
    <item
        android:id="@+id/nearby_stops"
        android:icon="?nearbyStopsIcon"
        android:title="@string/action_nearby_stops"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/favourites"
        android:icon="?favouriteStopIcon"
        android:title="@string/favourites"
        app:showAsAction="always" />
    <item
        android:id="@+id/trip_planner"
        android:icon="?tripPlannerIcon"
        android:title="@string/title_activity_trip_planner"
        app:showAsAction="ifRoom"
        android:visible="false"/>
    <item
        android:id="@+id/service_advisories"
        android:orderInCategory="100"
        android:title="@string/title_activity_service_advisories"
        app:showAsAction="never"
        android:visible="false"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
