<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kieran.winnipegbus.activities.StopTimesActivity">
    <item
        android:id="@+id/action_refresh"
        android:title="@string/refresh_stop_times_button"
        app:showAsAction="ifRoom"
        android:icon="?refreshIcon"/>
    <item
        android:id="@+id/add_to_favourites_button"
        android:icon="?addToFavouritesIcon"
        android:title="@string/add_to_favourites_button"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_filter"
        android:title="@string/filter_button"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
