<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kieran.winnipegbus.activities.SearchResultsActivity">

    <item
        android:id="@+id/loadingIcon"
        android:visible="true"
        app:showAsAction="always"
        android:title="@string/refresh_stop_times_button"
        android:icon="?refreshIcon"/>
    <item
        android:id="@+id/map"
        android:icon="?mapIcon"
        android:title="@string/map"
        app:showAsAction="ifRoom"
        android:visible="true"/>
    <item
        android:id="@+id/favourites"
        android:icon="?favouriteStopIcon"
        android:title="@string/favourites"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
