<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@+id/search_button">

        <EditText
            android:id="@+id/search_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:imeOptions="actionSearch"
            android:hint="@string/search_hint"/>

        <TextView
            android:paddingLeft="2dp"
            android:layout_below="@+id/search_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/search_tip"
            android:textSize="12sp" />


    </RelativeLayout>

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="submitSearch"
        android:text="@string/button_send" />

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:visibility="gone"
            android:id="@+id/homeScreenAdView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_home_unit_id">
        </com.google.android.gms.ads.AdView>

    </RelativeLayout>
