<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:clickable="false">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bus_times_table_frame"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <TableLayout
            android:id="@+id/bus_times_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/outline" >

            <TableRow
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <View android:layout_weight="1"
                    android:layout_height="0dp"
                    android:layout_width="64sp"/>

                <TextView
                    android:layout_weight="4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/bus_info_departure"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:gravity="right" />

                <TextView
                    android:id="@+id/arrival_times_header"
                    android:layout_weight="4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/bus_info_arrival"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:gravity="right"
                    android:visibility="gone"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="4dp"
                android:paddingRight="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/scheduled"
                    android:id="@+id/textView5"
                    android:layout_weight="1"
                    android:width="64sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/scheduled_departure"
                    android:layout_weight="4"
                    android:gravity="right" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/scheduled_arrival"
                    android:layout_weight="4"
                    android:gravity="right"
                    android:visibility="gone"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="4dp"
                android:paddingRight="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/estimated"
                    android:id="@+id/textView6"
                    android:layout_weight="1"
                    android:width="64sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/estimated_departure"
                    android:layout_weight="4"
                    android:gravity="right" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/estimated_arrival"
                    android:layout_weight="4"
                    android:gravity="right"
                    android:visibility="gone"/>

            </TableRow>

        </TableLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bus_info_group"
        android:layout_marginBottom="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/outline">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/has_bike_rack" />

            <TextView
                android:layout_below="@+id/has_bike_rack"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/has_easy_access" />
        </RelativeLayout>
    </FrameLayout>

</LinearLayout>